feat: upgrade payment system with SePay & WebSocket, sync analytics filters, and enhance POS UI